# CLUE

./: .gitignore  LICENSE  README.md  collect_results.py  pyproject.toml  requirements.txt
data/MeDiSumCode/: generate_code_dataset.py  icd9.py
data/MeDiSumQA/: example_statements.txt  generate_qas.py  get_example.py  post_process_qas.py  prompts.py  utils.py
eval/: eval_LongHealth.py  eval_MeDiSumCode.py  eval_MeDiSumQA.py  eval_ProblemSummary.py  eval_mednli.py  eval_meqsum.py  utils.py
scripts/: download_datasets.sh  run_benchmark.sh  run_clue.sh
scripts/launch_scripts/: run_LongHealth.sh  run_LongHealth8k.sh  run_MeDiSumCode.sh  run_MeDiSumQA.sh  run_medNLI.sh  run_medqsum.sh  run_problemsummary.sh
